# spin-templates-slack

./: README.md
templates/slack-slash-command-rust/content/: Cargo.toml  spin.toml
templates/slack-slash-command-rust/content/src/: lib.rs
templates/slack-slash-command-rust/metadata/: spin-template.toml
